cargo-features = ["edition2024"]

[package]
name = "corevm_child"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "corevm_child"
path = "src/main.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
polkavm-derive = { path = "../../crates/polkavm-derive" }
utils = { path = "../utils" }